--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
+    "react-data-table-component": "^7.7.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0"
   },
