--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
-    "chart.js": "^4.4.9",
+    "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
