--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "@tailwindcss/vite": "^4.1.7",
+    "antd": "^5.26.4",
     "axios": "^1.10.0",
     "chart.js": "^4.5.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.3",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-confirm-alert": "^3.0.6",
+    "react-countup": "^6.5.3",
     "react-data-table-component": "^7.7.0",
     "react-data-table-component-extensions": "^1.6.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.2",
+    "react-router-dom": "^7.6.3",
     "react-toastify": "^11.0.5",
     "sweetalert2": "^11.22.2",
     "sweetalert2-react-content": "^5.1.0"
